# natively-cluely-ai-assistant

./: .env.example  .gitattributes  .gitignore  ADR-001-TWO-WAY-CONVERSATION-ARCHITECTURE.md  AGENTS.md  AUDIO_FIXES_APPLIED.md  AUDIT_VALIDATION_REPORT.md  CHANGELOG.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_REVIEW_REPORT.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONSCIOUS_MODE_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  DEEP_MODE_PLAN.md  DEPLOYMENT.md  FINAL-DEVELOPMENT-CHECKLIST.md  FORENSIC_AUDIT_LLM_STEALTH_10PASS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  PHASE-1A-DEVELOPER-CHECKLIST.md  PHASE-1A-IMPLEMENTATION-SUMMARY.md  PRIVACY.md  PRIVACY_SECURITY_FIXES.md  PRODUCTION_READINESS_AUDIT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROLLING_CONTEXT_WINDOW_ARCHITECTURE.md  ROLLING_CONTEXT_WINDOW_PORTING_CHECKLIST.md  ROLLING_CONTEXT_WINDOW_SEQUENCE_DIAGRAM.md  SECURITY.md  STEALTH_FIX_PLAN.md  TODO.md  WINDOWS-INSTALL.md  WINDOWS_BUILD_GUIDE.md  agentskill-supercoder  api.js  build-and-install-windows.bat  build-and-install-windows.ps1  (+40 more)
.cursor/: settings.json
.github/: RELEASE_TEMPLATE.md
.playwright-cli/: page-2026-03-21T02-06-17-960Z.yml  page-2026-03-21T02-06-34-998Z.yml
native-module/: .npmignore  Cargo.toml  index.d.ts  index.js  index.node.abi  package.json
native-module/src/: audio_config.rs  cidre_test.rs  cursor_hook.rs  instruct.md.md  lib.rs  license.rs  microphone.rs  ocr.rs  resampler.rs  silence_suppression.rs  stealth.rs  stealth_keys.rs
native-module/src/speaker/: core_audio.rs  macos.rs  macos_sck.rs  mod.rs  sck.rs  windows.rs
(+1057 files in other folders)
