
[package]
name = "natively-audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", features = ["napi4"] }
napi-derive = "2.9.3"
cpal = "0.15.2"
ringbuf = "0.4"
anyhow = "1.0"
once_cell = "1.18.0"
rubato = "0.16"
rand = "0.8"
sha2 = "0.10"
machine-uid = "0.5"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"
webrtc-vad = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.11.10", features = ["ca", "cm", "av", "cat", "dispatch", "ns", "sc", "cf", "blocks", "objc"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.13.0"
windows = { version = "0.52.0", features = ["Win32_Media_Audio", "Win32_System_Com", "Win32_System_Threading"] }
tracing = "0.1.44"
